# inertiafx_lib

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  main.cpp
Core/: CMakeLists.txt
Core/Inc/: Body.h  Engine.h  GenericTypes.h  IBody.h  IMedium.h  IWorld.h  InertiaFXConfig.h  Logger.h  PointMass.h  VacuumWorld.h  World.h
Core/Src/: Body.cpp  Engine.cpp  Logger.cpp  PointMass.cpp  VacuumWorld.cpp  World.cpp
Reports/: CMakeLists.txt
Reports/Inc/: Plot.hpp  PositionReport.hpp  Report.hpp  ReportTypes.hpp  ScalarPlot.hpp  VectorPlot.hpp
Reports/Src/: Plot.cpp  PositionReport.cpp  Report.cpp  ScalarPlot.cpp  VectorPlot.cpp
docs/html/: acceleration_8cpp.html  acceleration_8h.html  acceleration_8h.js  acceleration_8h_source.html  ampere_8cpp.html  ampere_8h.html  ampere_8h.js  ampere_8h_source.html  annotated.html  annotated_dup.js  candela_8cpp.html  candela_8h.html  candela_8h.js  candela_8h_source.html  class_ampere_test-members.html  class_ampere_test.html  class_candela_test-members.html  class_candela_test.html  class_inertia_f_x.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_empty_space-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_empty_space.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_empty_space.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_entity-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_entity.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_entity.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_entity-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_entity.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_entity.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_material-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_material.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_material.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_medium-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_medium.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_medium.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_world-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_world.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_world.js  class_inertia_f_x_1_1_core_1_1_engine_1_1_liquid-members.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_liquid.html  class_inertia_f_x_1_1_core_1_1_engine_1_1_liquid.js  (+407 more)
docs/latex/: acceleration_8cpp.tex  acceleration_8h.tex  acceleration_8h_source.tex  ampere_8cpp.tex  ampere_8h.tex  ampere_8h_source.tex  annotated.tex  candela_8cpp.tex  candela_8h.tex  candela_8h_source.tex  class_ampere_test.eps  class_ampere_test.tex  class_candela_test.eps  class_candela_test.tex  class_inertia_f_x.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_empty_space.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_empty_space.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_entity.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_entity.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_entity.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_entity.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_material.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_material.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_medium.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_medium.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_world.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_i_world.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_liquid.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_liquid.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_material.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_material.tex  class_inertia_f_x_1_1_core_1_1_engine_1_1_medium.eps  class_inertia_f_x_1_1_core_1_1_engine_1_1_medium.tex  (+227 more)
src/: CMakeLists.txt  inertiafx.cpp  inertiafx.h
src/core/: CMakeLists.txt  core.cpp
src/core/engine/: CMakeLists.txt
src/core/engine/inc/: empty_space.h  engine.h  entity.h  ientity.h  imaterial.h  imedium.h  iworld.h  liquid.h  material.h  medium.h  point_mass.h  water.h  world.h
src/core/engine/src/: empty_space.cpp  engine.cpp  entity.cpp  liquid.cpp  material.cpp  point_mass.cpp  water.cpp
src/core/engine/tests/: CMakeLists.txt  test_empty_space.cpp  test_engine.cpp  test_liquid.cpp  test_point_mass.cpp
src/core/si/: CMakeLists.txt
src/core/si/inc/: acceleration.h  ampere.h  candela.h  decimal_prefix.h  density.h  derived_physical_unit.h  derived_qty.h  derived_scalar_qty.h  derived_vector_qty.h  force.h  fundamental_qty.h  iphysical_qty.h  iphysical_unit.h  iscalar_qty.h  ivector_qty.h  kelvin.h  kilogram.h  length.h  mass.h  metre.h  metre_per_second.h  metre_per_second_sq.h  mole.h  newton.h  pascal.h  physical_unit.h  position.h  pressure.h  second.h  si_time.h  temperature.h  velocity.h  volume.h
src/core/si/src/: acceleration.cpp  ampere.cpp  candela.cpp  decimal_prefix.cpp  density.cpp  derived_physical_unit.cpp  force.cpp  kelvin.cpp  kilogram.cpp  length.cpp  mass.cpp  metre.cpp  metre_per_second.cpp  metre_per_second_sq.cpp  mole.cpp  newton.cpp  pascal.cpp  physical_unit.cpp  position.cpp  pressure.cpp  second.cpp  si_time.cpp  temperature.cpp  velocity.cpp  volume.cpp
src/core/si/tests/: CMakeLists.txt  test_acceleration.cpp  test_ampere.cpp  test_candela.cpp  test_decimal_prefix.cpp  test_density.cpp  test_derived_qtys.cpp  test_force.cpp  test_fundamental_qtys.cpp  test_kelvin.cpp  test_kilogram.cpp  test_length.cpp  test_mass.cpp  test_metre.cpp  test_metre_per_second.cpp  test_metre_per_second_sq.cpp  test_mole.cpp  test_newton.cpp  test_pascal.cpp  test_physical_units.cpp  test_position.cpp  test_pressure.cpp  test_second.cpp  test_temperature.cpp  test_time.cpp  test_velocity.cpp  test_volume.cpp
src/core/tools/: CMakeLists.txt
src/core/tools/inc/: file_logger.h  ilogger.h  logger.h
src/core/tools/src/: file_logger.cpp  logger.cpp
src/core/tools/tests/: CMakeLists.txt  test_file_logger.cpp  test_logger.cpp
src/newtonian_mechanics/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/si/: CMakeLists.txt  test_decimal_prefix.cpp  test_physical_units.cpp
tests/newtonian_mechanics/: CMakeLists.txt
(+75 files in other folders)
