cmake_minimum_required(VERSION 3.22)
project(NewtonianMechanics)

# add_library(NewtonianMechanics STATIC)
# target_sources(NewtonianMechanics PRIVATE
#     src/Dynamics.cpp
# )

# target_include_directories(NewtonianMechanics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)

# target_link_libraries(NewtonianMechanics PRIVATE Core)

# install(TARGETS NewtonianMechanics DESTINATION lib)
# install(DIRECTORY inc/ DESTINATION include)