cmake_minimum_required(VERSION 3.22)
project(NewtonianMechanicsTests)

# add_executable(NewtonianMechanicsTests
#     test_dynamics.cpp
# )

# target_link_libraries(NewtonianMechanicsTests PRIVATE
#     gtest gtest_main
#     NewtonianMechanics
# )

# add_test(NAME NewtonianMechanicsTests COMMAND NewtonianMechanicsTests)